Omer/active track display fix (#102)
* fix display of mini track when title is too long

* apply fix to artist text as well

--- a/client/src/assets/styles/cmps/_active_track_preview.scss
+++ b/client/src/assets/styles/cmps/_active_track_preview.scss
@@ -20,25 +20,31 @@
 
             color: $text-base;
             font-size: 14px;
-    
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
             &:hover {
                 cursor: pointer;
             }
-    
+
         }
-    
+
         .artist {
             align-self: baseline;
 
             color: $text-subdued;
             font-size: 12px;
-    
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
             &:hover {
                 cursor: pointer;
                 color: $text-base;
             }
-    
+
         }
     }
-    
+
 }
